@@ -367,12 +367,13 @@ details. */
       211: Export fpurge, mkstemps.
       212: Add and export libstdc++ malloc wrappers.
       213: Export canonicalize_file_name, eaccess, euidaccess.
+      214: Export execvpe, fexecve.
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 213
+#define CYGWIN_VERSION_API_MINOR 214
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
